--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "format": "prettier --write \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/material": "^5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reactflow": "^11.10.1",
-    "@emotion/react": "^11.11.0",
-    "@mui/material": "^5.15.0",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
@@ -31,4 +33,4 @@
     "typescript": "^5.2.2",
     "vite": "^5.1.6"
   }
-} 
+}
