--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
+    "@mui/lab": "^6.0.0-beta.31",
     "@mui/material": "^5.15.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-syntax-highlighter": "^15.6.1",
     "reactflow": "^11.10.1",
     "zustand": "^4.5.1"
   },
